--- a/index.html
+++ b/index.html
@@ -14,62 +14,86 @@
 </head>
 <body>
     <main>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">MA1</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">MA1</a>
+        <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">HOME</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">ABOUT</a>
-              </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
             </ul>
-          </div>
         </div>
     </nav>
 
     <h1>Page heading</h1>
-    <div class="container">
+    <div class="container-l">
       <div class="row">
-        <div class="col-md">
-          Column
+        <div class=" col-lg-3">
+          <div class="square"></div>
         </div>
-        <div class="col-md">
-          Column
+        <div class=" col-lg-3">
+          <div class="square"></div>
         </div>
-        <div class="col-md">
-          Column
+        <div class=" col-lg-3">
+          <div class="square bordered"></div>
         </div>
-        <div class="col-md">
-          Column
+        <div class=" col-lg-3">
+          <div class="square"></div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-md">
-          Column
+        <div class=" col-lg-3">
+          <div class="square"></div>
         </div>
-        <div class="col-md">
-          Column
+        <div class=" col-lg-3">
+          <div class="square filled"></div>
         </div>
-        <div class="col-md">
-          Column
+        <div class=" col-lg-3">
+          <div class="square"></div>
         </div>
-        <div class="col-md">
-          Column
+        <div class=" col-lg-3">
+          <div class="square bordered"></div>
         </div>
       </div>
     </div>
+    <!-- <div class="container">
+      <div class="row">
+        <div class="col-md">
+        </div>
+        <div class="col-md">
+        </div>
+        <div class="col-md bordered">
+        </div>
+        <div class="col-md">
+        </div>
+      </div>
 
+      <div class="row">
+        <div class="col-md">
+        </div>
+        <div class="col-md filled">
+        </div>
+        <div class="col-md">
+        </div>
+        <div class="col-md bordered">
+        </div>
+      </div>
+    </div> -->
+</main>
 <footer>
-    <div>
         <span class="mail">hello@email.com</span>
         <span>Copyright 2020</span>
-    </div>
 </footer>
 
 
